# data_preparation

./: .devcontainer.json  .env_template  .gitignore  Dockerfile  README.md  collect.py  docker-compose.yml  initdb.py  manage.py  prepare.py  process_population_buildings.py  produce_population_buildings.py  pyproject.toml  temp.py  test_hex_geom.geojson  test_p_upd.py  upload_new_pois_cat.py
.github/ISSUE_TEMPLATE/: concrete-task.md  feature_request.md
.github/workflows/: main.yml  test_flow.yml
docs/: command _line.md  index.md  remote_database_connection.md
docs/data_collection/: landuse_buildings.md
docs/data_preparation/: layers.md  population.md
docs/data_update/: pois.md
docs/diagrams/src/: gtfs_pipeline.drawio
importer/: .env_template  README.md  docker-compose.yaml  importer.sh  postgresql.conf  settings.xml
importer/bridge/: list_of_files.txt
src/: cli.md
src/analysis/gtfs/: data_corrections.py  export_gtfs.py  trip_count.py
src/collection/: admins_overture.py  base_overture.py  building.py  building_citygml.py  building_overture.py  citygml_collection.py  collection.py  fusion.py  gtfs.py  landuse.py  network.py  network_overture.py  network_pt.py  osm_collection.py  osm_collection_base.py  osm_pt_lines.py  overture.py  overture_collection_base.py  poi.py  poi_overture.py  preparation.py  sql_scripts.py  update.py
src/collection/kart/: README.md  prepare_kart.py
src/config/: building_function.xml  building_function_types_citygml.xml  config.py  config.yaml  db.yaml  osm_dict.py  osm_pt_lines.style
src/config/data_variables/: building.yaml  landuse.yaml  network.yaml  poi.yaml  population.yaml
src/core/: config.py  enums.py
src/db/: config.py  db.py  poi_similarity.sql  prepare.py
src/export/: export_goat.py  export_sql_queries.py  export_tables2basic.py  export_tables2basic_old.py
src/fusion/: poi_osm_overture.py
src/import/: common_import_functions.py
src/kart/: prepare_kart.py
src/legacy/: export_goat.py  export_tables2extra.py  upload_new_pois_cat.py
src/migration/: db_bridge.py  db_migration.py  db_migration_base.py  db_network_migration.py  gtfs.py
src/network/: network_collection.py  network_islands.py  network_islands_municip.py  network_preparation.py  network_preparation1.py  network_table_upd.py  ways.py
src/other/: create_h3_grid.py  export.py  gtfs_germany.sql  gtfs_preparation.sql  utility_functions.py  utils.py
src/population/: classify_buildings.py  create_residential_addresses.py  population_data_preparation.py  population_extrapolated_census.py  process_population_buildings.py  produce_population_points.py
src/preparation/: building.py  export.py  gtfs.py  gtfs_region.sql  gtfs_stations.py  gtfs_stops.py  landuse.py  network.py  network_car.py  network_islands.py  network_overture.py  network_overture_parallelism.py  network_preparation.py  network_pt.py  osm_pt_lines.py  overture_division_area.py  poi.py  poi_osm_overture_fusion.py  poi_overture.py  poi_refactor.py  pois_preparation.py  population.py  public_transport_stop.py  public_transport_stops.py  subscription.py
src/scripts/: fetch_citygml.py
src/utils/: create_h3_grid.py  geocoding.py  geocoding_functions.py  gtfs_preparation.sql  import.py  utility_functions.py  utils.py
(+87 files in other folders)
