[tool.poetry]
name = "goat_data-preparation"
version = "1.0.0"
description = ""
authors = ["Admin <info@plan4better.de>"]

[tool.poetry.dependencies]
python = "^3.9"
geopandas = "0.12.2"
Cython = "0.29.24"
GeoAlchemy2 = "0.6.3"
geojson = "2.5.0"
geopy = "2.2.0"
psycopg2 = "2.9.2"
pyrobuf = "0.9.3"
PyYAML = "5.4.1"
argparse = "^1.4.0"
sklearn = "^0.0"
joblib = "^1.1.0"
cykhash = "1.0.2"
Fiona = "1.8.20"
h3 = "^3.7.3"
python-decouple = "^3.6"
mkdocs = "^1.2.3"
mkdocs-material = "^8.2.2"
psutil = "^5.9.0"
rich = "^12.4.4"
GitPython = "^3.1.30"
boto3 = "^1.26.50"
SQLAlchemy = "1.4.23"
pydantic = "1.4"
geojson-pydantic = "0.3.1"
pyarrow = "^10.0.1"
shapely = "2.0.0"
postal = "^1.1.10"
connectorx = "^0.3.1"
polars = "^0.15.17"
cdifflib = "^1.2.6"
diff-match-patch = "^20200713"
requests = "^2.28.2"
typer = "^0.7.0"

[tool.poetry.dev-dependencies]
mypy = "^0.770"
isort = "^4.3.21"
autoflake = "^1.3.1"
flake8 = "^3.7.9"
pytest = "^6.2.5"
pytest-cov = "^3.0.0"
debugpy = "^1.4.1"
black = "^22.12.0"
pylint = "^2.12.2"

[tool.isort]
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
line_length = 88
profile = "black"
